--- a/src/blocks/info-block/styles/style.scss
+++ b/src/blocks/info-block/styles/style.scss
@@ -15,7 +15,7 @@
 .responsive-block-editor-addons-ifb-icon svg {
   width: inherit;
   height: inherit;
-  vertical-align: middle;
+  vertical-align: baseline;
 }
 
 .infobox-icon-above-title .responsive-block-editor-addons-ifb-left-right-wrap {
