--- a/src/blocks/portfolio/styles/style.scss
+++ b/src/blocks/portfolio/styles/style.scss
@@ -31,6 +31,10 @@
         display: inline-block;
         vertical-align: top;
       }
+
+      .show-title-false {
+        display: none;
+      }
     }
   }
 
