--- a/src/blocks/portfolio/styles/style.scss
+++ b/src/blocks/portfolio/styles/style.scss
@@ -78,6 +78,25 @@
     }
   }
 
+  .is-grid.columns-5 {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+
+    @media all and (-ms-high-contrast: none) {
+      article {
+        width: 19%;
+      }
+    }
+  }
+  .is-grid.columns-6 {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+
+    @media all and (-ms-high-contrast: none) {
+      article {
+        width: 15%;
+      }
+    }
+  }
+
   div[class*="columns"].is-grid {
     @media only screen and (max-width: 600px) {
       grid-template-columns: 1fr;
