RBEA-771-Testimonial Slider fix for navigation dots

--- a/src/blocks/testimonial-slider/styles/style.scss
+++ b/src/blocks/testimonial-slider/styles/style.scss
@@ -317,3 +317,8 @@
 .responsive-block-editor-addons-testomonial__outer-wrap .slick-track {
   max-width: initial !important;
 }
+
+.responsive-block-editor-addons-slick-carousel ul.slick-dots {
+  position: relative;
+  transform: unset;
+}
