--- a/src/blocks/number-box/styles/styles.editor.scss
+++ b/src/blocks/number-box/styles/styles.editor.scss
@@ -1,6 +1,25 @@
 .responsive-block-editor-addons-block-number-box {
     padding: 0;
     margin: 0 auto;
+    
+    .rbea-number-box {
+        display: flex;
+    }
 
+    .rbea-number-box-container {
+        width: 100px;
+        height: 100px;
+        background-color: red;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+    }
+
+    .rbea-number-box-block {
+        font-size: 51px;
+        color: #fff;
+        font-weight: bold;
+    }
     
 }
