--- a/src/blocks/number-box/styles/style.scss
+++ b/src/blocks/number-box/styles/style.scss
@@ -1,11 +1,29 @@
 .responsive-block-editor-addons-block-number-box {
     padding: 0;
     margin: 0 auto;
-    
+
+    .rbea-number-box-main-container {
+        padding-top: 25px;
+        padding-bottom: 25px;
+        position: relative;
+        display: flex;
+    }
+
+    .rbea-number-box-main-container::before {
+        content: '';
+        background-size: cover;
+        position: absolute;
+        top: 0px;
+        right: 0px;
+        bottom: 0px;
+        left: 0px;
+    }
+
     .rbea-number-box {
         display: flex;
     }
 
+    // number
     .rbea-number-box-container {
         width: 100px;
         height: 100px;
@@ -14,12 +32,12 @@
         justify-content: center;
         align-items: center;
         border-radius: 50%;
+        z-index: 99;
     }
 
     .rbea-number-box-block {
         font-size: 51px;
         color: #fff;
-        font-weight: bold;
     }
-    
+
 }
