--- a/src/blocks/number-box/styles/styles.editor.scss
+++ b/src/blocks/number-box/styles/styles.editor.scss
@@ -1,6 +1,7 @@
 .responsive-block-editor-addons-block-number-box {
     padding: 0;
     margin: 0 auto;
+    display: flex;
 
     .rbea-number-box-main-container {
         padding-top: 25px;
