--- a/src/blocks/featured-product/styles/styles.editor.scss
+++ b/src/blocks/featured-product/styles/styles.editor.scss
@@ -1,56 +1,153 @@
-.responsive-block-editor-addons-block-advanced-heading {
-    padding: 0;
-    margin: 0 auto;
-  
-    .responsive-heading-title-text {
-      margin: 0;
-    }
-  
-    .responsive-heading-seperator-wrap {
-      font-size: 0;
-    }
-  
-    .responsive-heading-seperator {
-      border-top-style: solid;
-      display: inline-block;
-      border-top-width: 2px;
-      width: 5%;
-      margin: 0px 0px 10px 0px;
-    }
-  
-    .responsive-heading-desc-text {
-      margin: 0;
-    }
+.responsive-block-editor-addons-block-featured-product {
+  padding: 0;
+  margin: 0 auto;
+}
 
+.fp-container {
+  border: 2px solid black;
+  padding: 0 15px;
+
+  form h2 {
+    font-size: 18pt;
+    font-weight: 400;
   }
-  
-  .fp-container {
-    border: 2px solid black;
-    padding: 0 15px;
 
-    form h2 {
-      font-size: 18pt;
-      font-weight: 400;
+  form p {
+    font-size: 15px;
+  }
+
+  form #fp-searchbar input{
+    width: 100%;
+    margin-top: 11px;
+    margin-bottom: 18px;
+  }
+
+  .fp-radio-container{
+    overflow-y: scroll;
+    max-height: 300px;
+    border: 1px solid grey;
+  }
+
+  .fp-radio-container div{
+    border: 1px solid grey;
+    padding: 12px;  
+  }
+
+  .button{
+    margin: 15px 0 15px 0px;
+    width: 55px;
+    height: 35px;
+  }
+}
+
+.block-featured-product {
+
+  background-color: inherit;
+  align-content: center;
+  align-items: center;
+  background-position: 50%;
+  background-size: cover;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  color: rgb(255, 255, 255);
+
+  .featured-product__wrapper{
+
+    min-height: 619px;
+    align-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+
+    .background-dim__overlay::before {
+
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      background: inherit;
+      border-radius: inherit;
+      opacity: .5;
+      z-index: 1;
+
     }
 
-    form p {
-      font-size: 15px;
-    }
-
-    form #fp-searchbar input{
+    .featured-product__background-image {
+      margin: 0;
+      padding: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
       width: 100%;
-      margin-top: 11px;
-      margin-bottom: 18px;
+      height: 100%;
+      background-position: 50% 50%;
     }
 
-    .fp-radio-container{
-      overflow-y: scroll;
-      max-height: 300px;
-      border: 1px solid grey;
+    .featured-product__title {
+      color: inherit;
+      margin-top: 0;
+      border: 0;
+      width: 100%;
+      padding: 0 48px 16px;
+      z-index: 1;
+      line-height: 1.25;
+      margin-bottom: 0;
+      text-align: center;
     }
-  
-    .fp-radio-container div{
-      border: 1px solid grey;
-      padding: 12px;  
+
+    .featured-product__description {
+      width: 100%;
+      padding: 0 48px 16px;
+      z-index: 1;
+      line-height: 1.25;
+      margin-bottom: 0;
+      text-align: center;
+      color: inherit;
     }
+
+    .featured-product__price {
+      width: 100%;
+      padding: 0 48px 16px;
+      z-index: 1;
+      line-height: 1.25;
+      margin-bottom: 0;
+      text-align: center;
+      color: inherit;
+    }
+
+    .featured-product__link {
+      width: 100%;
+      padding: 0 48px 16px;
+      z-index: 1;
+      line-height: 1.25;
+      margin-bottom: 0;
+      text-align: center;
+
+      button{
+        background-color: black;
+        color: white;
+        width: 110px;
+        height: 48px;
+        border-radius: 25px;
+        cursor: pointer;
+      }
+    }
+
   }
+
+}
+
