--- a/admin/css/responsive-block-editor-addons-getting-started.css
+++ b/admin/css/responsive-block-editor-addons-getting-started.css
@@ -1,4 +1,5 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css');
+@import url('https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;500;600&display=swap');
 
 * {
