Added settings for overlay

--- a/src/blocks/image/styles/style.scss
+++ b/src/blocks/image/styles/style.scss
@@ -13,6 +13,7 @@
 .img-block{
     display: inline-block;
     vertical-align: top;
+    position: relative;
 }
 .image-selection-container{
     display: flex;
@@ -25,4 +26,26 @@
 }
 .block-editor-block-toolbar__slot {
     border-right: 1px solid #1e1e1e;
+}
+.responsive-image-block-description{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    justify-content: center;
+    align-items: center;
+    transition: .35s ease-in-out;
+}
+.responsive-image-block-description-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transition: .35s ease-in-out;
+    background: rgba(0,0,0,.5);
+    transition: 20;
 }
