--- a/src/blocks/popup/styles/styles.editor.scss
+++ b/src/blocks/popup/styles/styles.editor.scss
@@ -1,25 +1,67 @@
-.responsive-block-editor-addons-block-advanced-heading {
-    padding: 0;
-    margin: 0 auto;
-  
-    .responsive-heading-title-text {
-      margin: 0;
+.responsive-block-editor-addons-block-popup {
+  padding: 0;
+  margin: 0 auto;
+
+  .rba-popup-selector {
+    border: 2px solid #000;
+    border-radius: 4px;
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+
+    .rba-popup-selector-head {
+      display: flex;
+      align-items: center;
+
+      .rba-popup-block-name {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 26.6px;
+        color: #1e1e1e;
+        margin-left: 12px;
+      }
     }
-  
-    .responsive-heading-seperator-wrap {
-      font-size: 0;
+
+    .rba-popup-block-text {
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 18.62px;
+      margin-top: 10px;
     }
-  
-    .responsive-heading-seperator {
-      border-top-style: solid;
-      display: inline-block;
-      border-top-width: 2px;
-      width: 5%;
-      margin: 0px 0px 10px 0px;
+
+    .rba-popup-preset-selection {
+      display: flex;
+      margin-top: 30px;
     }
-  
-    .responsive-heading-desc-text {
-      margin: 0;
+
+    .rba-popup-preset {
+      padding: 10px;
+      text-align: center;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #F6F6F6;
+      }
+      
+      &:not(:first-child) {
+        margin-left: 30px;
+      }
+
+      .rba-popup-preset-title {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 14px;
+        text-align: center;
+      }
+      
+      .rba-popup-preset-desc {
+          font-weight: 400;
+          font-size: 12px;
+          line-height: 9.31px;
+          text-align: center;
+          color: #8A8A8A;
+      }
     }
   }
+
+}
   
