--- a/src/blocks/popup/styles/styles.editor.scss
+++ b/src/blocks/popup/styles/styles.editor.scss
@@ -63,5 +63,60 @@
     }
   }
 
+  .responsive-block-editor-addons-popup-modal-wrap {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 99999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+
+    .responsive-block-editor-addons-popup-modal-wrap-overlay {
+      background-color: #10659C;
+      opacity: 0.95;
+      left: 0;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      position: absolute;
+      z-index: 99998;
+    }
+
+    .responsive-block-editor-addons-popup-modal-content {
+      margin-top: 25px;
+      margin-right: 295px;
+      position: absolute;
+      z-index: 100000;
+      background-color: #fff;
+      width: 860px;
+      max-width: 100%;
+      height: fit-content;
+      padding: 20px;
+      border-width: 0px 0px 0px 0px;
+      border-radius: 0px 0px 0px 0px;
+      border-color: #000;
+      border-style: solid;
+      box-sizing: border-box;
+      scroll-behavior: auto;
+      box-shadow: unset;
+
+      .responsive-block-editor-addons-popup-modal-body {
+        max-height: 75vh;
+        overflow: auto;
+        overflow: -moz-scrollbars-none;
+        height: 100%;
+        min-height: 70px;
+        -ms-overflow-style: none;
+
+        &::-webkit-scrollbar {
+          display: none;
+        }
+      }
+    }
+  }
 }
   
