--- a/src/blocks/popup/styles/style.scss
+++ b/src/blocks/popup/styles/style.scss
@@ -1,6 +1,15 @@
 .responsive-block-editor-addons-block-popup {
     padding: 0;
     margin: 0 auto;
+
+    .button.button-primary {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      font-size: 14px;
+      line-height: 0.5;
+      font-family: Arial, Helvetica, sans-serif;
+    }
   
     .responsive-block-editor-addons-popup-modal-wrap {
       position: fixed;
@@ -27,7 +36,6 @@
   
       .responsive-block-editor-addons-popup-modal-content {
         margin-top: 25px;
-        margin-right: 295px;
         position: absolute;
         z-index: 100000;
         background-color: #fff;
