--- a/src/blocks/popup/styles/styles.editor.scss
+++ b/src/blocks/popup/styles/styles.editor.scss
@@ -42,8 +42,8 @@
         background-color: #F6F6F6;
       }
       
-      &:not(:first-child) {
-        margin-left: 30px;
+      &:nth-child(3) {
+        width: 140px;
       }
 
       .rba-popup-preset-title {
