--- a/src/blocks/popup/styles/styles.editor.scss
+++ b/src/blocks/popup/styles/styles.editor.scss
@@ -192,11 +192,15 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 4px;
-
+  
   .responsive-block-editor-addons-popup-button-preset {
     text-align: center;
     padding: 10px;
     border-color: 2px solid black;
+    
+    button {
+      cursor: pointer;
+    }
 
     button.selectedPresetBorder {
       border: 2px solid #007cba;
