--- a/src/blocks/popup/styles/styles.editor.scss
+++ b/src/blocks/popup/styles/styles.editor.scss
@@ -53,7 +53,7 @@
       cursor: pointer;
 
       &:hover {
-        background-color: #F6F6F6;
+        background-color: #e4e4e4;
       }
 
       &:nth-child(3) {
@@ -192,12 +192,12 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 4px;
-  
+
   .responsive-block-editor-addons-popup-button-preset {
     text-align: center;
     padding: 10px;
     border-color: 2px solid black;
-    
+
     button {
       cursor: pointer;
     }
