Remove unwanted variables

--- a/src/blocks/popup/styles/style.scss
+++ b/src/blocks/popup/styles/style.scss
@@ -9,6 +9,7 @@
       display: flex;
       align-items: center;
       cursor: pointer;
+      text-transform: none;
     }
 
     .responsive-popup-trigger-anchor {
