--- a/src/blocks/section-block/layout/style.scss
+++ b/src/blocks/section-block/layout/style.scss
@@ -46,6 +46,9 @@
   line-height: 20px;
   letter-spacing: 0em;
   text-align: left;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 .modal-tabs {
   height: 62px;
@@ -245,6 +248,7 @@
   color: #ffffff;
   width: auto;
   padding: 0 20px;
+  cursor: pointer;
 }
 .rba-sectoin-block-inner-div-btn-white {
   height: 38px;
@@ -260,6 +264,7 @@
   color: #0260a7;
   width: auto;
   padding: 0 20px;
+  cursor: pointer;
 }
 .full-screen-modal .rba-popup-inner-img-div::-webkit-scrollbar {
   width: 8px;
