--- a/src/blocks/form/styles/styles.editor.scss
+++ b/src/blocks/form/styles/styles.editor.scss
@@ -2,3 +2,14 @@
   padding: 0;
   margin: 0 auto;
 }
+
+// Inspector Controls Styling.
+.responsive-block-editor-addons-form-border-radius-control {
+	.component-box-control__header-control-wrapper {
+		.components-flex-item {
+			&:first-child {
+				transform: rotate(315deg);
+			}
+		}
+	}
+}
