Modify the css issue

--- a/src/blocks/contact-form-7-styler/styles/styles.editor.scss
+++ b/src/blocks/contact-form-7-styler/styles/styles.editor.scss
@@ -1,4 +1,5 @@
-  .form-container{
+.responsive-block-editor-addons-block-contact-form-7-styler {
+.form-container{
     display: flex;
   }
 
@@ -87,3 +88,4 @@
     display: flex;
     justify-content:center;
   }
+}
