--- a/src/blocks/contact-form-7-styler/styles/style.scss
+++ b/src/blocks/contact-form-7-styler/styles/style.scss
@@ -1,3 +1,4 @@
+.responsive-block-editor-addons-block-contact-form-7-styler {
 .form-container {
   display: flex;
 }
@@ -203,3 +204,4 @@ p>label {
 		-webkit-border-radius: 100%;
 		border-radius: 100%;
 	}
+}
