Fix input helper text position

--- a/src/blocks/form/input/styles/style.scss
+++ b/src/blocks/form/input/styles/style.scss
@@ -10,6 +10,10 @@
     display: block;
   }
 
+  .responsive-block-editor-addons-form-input__helper {
+    display: block;
+  }
+
   .responsive-block-editor-addons-form-input-checkbox-container {
     display: flex;
     align-items: center;
