--- a/src/blocks/form/input/styles/styles.editor.scss
+++ b/src/blocks/form/input/styles/styles.editor.scss
@@ -5,6 +5,10 @@
   .responsive-block-editor-addons-form-input-label {
     display: block;
   }
+  
+  .responsive-block-editor-addons-form-input__helper {
+    display: block;
+  }
 
   .responsive-block-editor-addons-form-input-checkbox-container {
     display: flex;
