Added Z Index Setting

--- a/src/blocks/advanced-text/styles/style.scss
+++ b/src/blocks/advanced-text/styles/style.scss
@@ -142,3 +142,6 @@
 .responsive-block-editor-addons-text-content p {
 	margin-top: 0px;
 }
+.responsive-block-editor-addons-block-advanced-text{
+	position: relative;
+}
