--- a/src/blocks/card/styles/style.scss
+++ b/src/blocks/card/styles/style.scss
@@ -58,13 +58,13 @@
   height: 200px;
   width: 100%;
   padding: 0;
-  z-index: 999;
+  // z-index: 999;
 
   .responsive-block-editor-addons-card-avatar-img {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    z-index: 3;
+    // z-index: 3;
     background-color: #f1f1f1;
     display: flex;
     justify-content: center;
@@ -180,9 +180,9 @@
   padding: 0.8em 1.2em;
 }
 
-.wp-block-responsive-block-editor-addons-card__inner * {
-  z-index: 10;
-}
+// .wp-block-responsive-block-editor-addons-card__inner * {
+//   z-index: 10;
+// }
 
 .responsive-block-editor-addons-card-background-image:not(.has-background-dim) {
   opacity: 0;
