--- a/src/blocks/call-to-action/styles/style.scss
+++ b/src/blocks/call-to-action/styles/style.scss
@@ -4,11 +4,17 @@
  */
 
 .responsive-block-editor-addons-block-cta {
-  margin: 0 0 1.2em 0;
   position: relative;
   color: #293038;
-  padding: 5% 3%;
   border-radius: 5px;
+
+  .responsive-block-editor-addons-block-call-to-action{
+    margin: 5% 3%;
+    
+    @media only screen and (max-width: 768px) {
+      margin: 8% 6%;
+    }
+  }
 
   .components-autocomplete {
     display: inline-block;
@@ -24,11 +30,6 @@
 
   &.alignfull {
     border-radius: 0;
-    padding: 4% 3%;
-  }
-
-  @media only screen and (max-width: 768px) {
-    padding: 8% 6%;
   }
 
   &.alignfull .responsive-block-editor-addons-cta-content,
