Added settings for the close button in the Popup block.

--- a/src/blocks/popup/styles/style.scss
+++ b/src/blocks/popup/styles/style.scss
@@ -87,3 +87,25 @@
   }
 
 }
+.responsive-block-editor-addons-icon-list__source-icon{
+  width: 20px;
+  height: 20px;
+}
+.responsive-block-editor-addons-icon-list__source-icon svg{
+  width: 20px;
+  height: 20px;
+}
+.responsive-block-editor-addons-popup-close-button__source-image{
+  width: 20px;
+  height: 20px;
+}
+.responsive-block-editor-addons-popup-close-button-position-outside-align-right {
+  position: absolute;
+  top: -12px;
+  right: -12px;
+}
+.responsive-block-editor-addons-popup-close-button-position-outside-align-left {
+  position: absolute;
+  top: -12px;
+  left: -12px;
+}
