--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -3,3 +3,4 @@
 @import "../blocks/**/styles.editor.scss";
 @import "../components/css/inspectorTabs.scss";
 @import "../settings-components/TypographySettings/editor.scss";
+@import "../settings-components/ResponsiveNewSpacingSettings/editor.scss";
