--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -4,3 +4,4 @@
 @import "../components/css/inspectorTabs.scss";
 @import "../settings-components/TypographySettings/editor.scss";
 @import "../settings-components/ResponsiveNewSpacingSettings/editor.scss";
+@import "../settings-components/SectionBlockBorderSettings/editor.scss";
