--- a/src/utils/components/responsive-tabs-control/styles/editor.scss
+++ b/src/utils/components/responsive-tabs-control/styles/editor.scss
@@ -271,3 +271,13 @@
     }
   }
 }
+
+.rbea-inspector-tab {
+  .components-panel__body.is-opened {
+    padding: 20px 24px;
+  }
+
+  .dashicons-image-rotate {
+    color: #666666;
+  }
+}
